Update scripts and documentation

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,16 @@
 # Project-specific files
+SCUS_971.98
 *[Ss][Cc][Uu][Ss]*
 *971*98*
+SCUS_*.*
+*.elf
+
 prodg_sce*
+tools/cc/*
 usr/
 sce/
-docs/
+
+html/
 functions.txt
 
 # Splat files
