--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -291,7 +291,7 @@ segments:
     #- [0x, asm, P2/ui]
 
     - [0xeac78, asm, P2/update]
-    - [0xeb408, asm, P2/util]
+    - [0xeb408, c, P2/util]
 
     - [0xec518, asm] #? unknown file
 
