Add rand lib split config

--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -318,6 +318,10 @@ segments:
     #--------------------------------------------------------
     - [0xF69C4, asm] # TBD #MARK: libs
 
+    - [0xF76F8, c, sce/rand]
+
+    - [0xF7738, asm]
+
     #--------------------------------------------------------
 
     - [0x112E10, textbin, vutext] #MARK: vutext
