Decomp binoc.c function

--- a/.gitignore
+++ b/.gitignore
@@ -17,9 +17,12 @@ functions.txt
 splat/
 assets/
 asm/
-c/
-undefined_funcs*.txt
-undefined_syms*.txt
+undefined_funcs_auto.txt
+undefined_syms_auto.txt
+.splache
+.ninja_log
+*.ninja
+permuter_settings.toml
 
 ## Binary/object products
 **/bin/
