--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -94,7 +94,7 @@ segments:
     - [0x30cf0, asm, P2/bas]
     - [0x310e8, asm, P2/basic]
     - [0x31168, asm, P2/bez]
-    - [0x31f48, asm, P2/binoc]
+    - [0x31f48, c, P2/binoc]
     - [0x38290, asm, P2/bis]
     - [0x395a0, asm, P2/bbmark]
     - [0x39ff0, asm, P2/blend]
