Add declarations sfor util and vec functions

--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -292,7 +292,7 @@ segments:
 
     - [0xec518, asm] #? unknown file
 
-    - [0xee650, asm, P2/vec]
+    - [0xee650, c, P2/vec]
     - [0xef318, asm, P2/vifs]
     - [0xef900, asm, P2/vis]
     - [0xefc60, asm, P2/water]
