Work on game.c functions

--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -149,7 +149,7 @@ segments:
     - [0x5f810, asm, P2/frm]
     - [0x60678, asm, P2/freeze]
     - [0x60f88, asm, P2/frzg]
-    - [0x61070, asm, P2/game]
+    - [0x61070, c, P2/game]
 
     - [0x61e80, asm, P2/geom]
     #- [0x, asm, P2/gifs]
