--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,7 @@ jobs:
 
       - name: Setup build environment
         run: |
+          sudo apt-get install wine-stable binutils-mips-linux-gnu
           scripts/setup_progd_linux.sh
           curl -o disc/SCUS_971.98 "${{ secrets.FILE_URL }}"
 
