--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
@@ -25,9 +25,15 @@ jobs:
           python -m pip install --upgrade pip
           pip install -U -r requirements.txt
 
+      - name: Setup wine
+        run: |
+          sudo dpkg --add-architecture i386
+          sudo apt-get update
+          sudo apt-get install wine32
+
       - name: Setup build environment
         run: |
-          sudo apt-get install wine-stable binutils-mips-linux-gnu
+          sudo apt-get install binutils-mips-linux-gnu
           scripts/setup_progd_linux.sh
           curl -o disc/SCUS_971.98 "${{ secrets.FILE_URL }}"
 
