--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -282,11 +282,9 @@ segments:
 
     - [0xe5e38, asm, P2/transition]
     - [0xe6378, asm, P2/turret]
-
     - [0xe6e70, asm, P2/tv]
-    #- [0x, asm, P2/ub]
-    #- [0x, asm, P2/ui]
-
+    - [0xe98d0, asm, P2/ub]
+    - [0xea088, c, P2/ui]
     - [0xeac78, asm, P2/update]
     - [0xeb408, c, P2/util]
 
