Minor text fixes

--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -494,7 +494,7 @@ segments:
     #- [0x, data, P2/stephide]
     #- [0x, data, P2/steppipe]
     #- [0x, data, P2/steppower]
-    #- [0x, data, P2/step_pqr_unk] #? unknown file
+    #- [0x, data, P2/steprail] #? unknown file
     #- [0x, data, P2/steprun]
     #- [0x, data, P2/stepside]
     #- [0x, data, P2/stepzap]
