Misc project cleanup

--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -258,7 +258,7 @@ segments:
     - [0xcefb8, asm, P2/stephide]
     - [0xd24f0, asm, P2/steppipe]
     - [0xd39c8, c, P2/steppower]
-    - [0xd41cc, asm] # 4 bytes padding after steppower, needed to align steprail
+    - [0xd41cc, asm, P2/steppower_padding] # Needed to align steprail
     - [0xd41d0, asm, P2/steprail] #? unconfirmed name
     - [0xd46f0, asm, P2/steprun]
     - [0xd5148, asm, P2/stepside]
