--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -166,8 +166,11 @@ segments:
 
     - [0x6f0b8, c, P2/joy]
 
-    - [0x70608, asm, P2/jt]
-    #- [0x, asm, P2/jp]
+    - [0x70608, c, P2/jt1]
+    - [0x74888, asm, P2/jt_UpdateJtActive]
+    - [0x75808, c, P2/jt2]
+
+    - [0x79008, asm, P2/jp]
     #- [0x, asm, P2/jsg]
 
     - [0x7e248, asm, P2/jump]
