Match CRef methods

--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -63,7 +63,7 @@ segments:
     - [0x1be78, asm, P2/splice/method]
     #- [0x1bf98, asm, P2/splice/pair]
     - [0x1bf98, asm, P2/splice/proc]
-    - [0x1c008, c, P2/splice/ref]
+    - [0x1c008, cpp, P2/splice/ref]
     - [0x1ca28, asm, P2/splice/serialize]
     - [0x1cd28, asm, P2/splice/sidebag]
     - [0x1cf70, cpp, P2/splice/spliceutils]
