--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -114,7 +114,7 @@ segments:
     - [0x43ed0, c, P2/clock]
     - [0x44148, c, P2/cm]
     - [0x47100, asm, P2/cnvo]
-    - [0x491A0, c, P2/coin]
+    - [0x47340, c, P2/coin]
     - [0x4a398, asm, P2/cplcy]
     - [0x4bbd0, asm, P2/credit]
 
