--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -277,8 +277,8 @@ segments:
     #- [0x, asm, P2/target]
 
     - [0xe18f8, asm, P2/text]
-    #- [0x, asm, P2/thread]
-    #- [0x, asm, P2/tn]
+    - [0xe3268, c, P2/thread]
+    - [0xe3420, asm, P2/tn]
 
     - [0xe5e38, c, P2/transition]
     - [0xe6378, asm, P2/turret]
