progress in joy.c

--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -416,7 +416,7 @@ segments:
     #- [0x, data, P2/jack]
     #- [0x, data, P2/jlo]
 
-    - [0x163a50, data, P2/joy]
+    - [0x163A30, data, P2/joy]
 
     - [0x163e10, data] # TODO fix jt splits
     #- [0x163e10, data, P2/jt]
