--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -75,7 +75,7 @@ segments:
     # All .c files (but compiled as c++)
     #--------------------------------------------------------
     - [0x1dbb8, asm, P2/989snd] #MARK: P2
-    - [0x1f560, asm, P2/brx]
+    - [0x1f560, c, P2/brx]
 
     - [0x1fe70, asm, P2/ac]
     #- [0x, asm, P2/act]
