--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -138,7 +138,7 @@ segments:
     - [0x5a6e0, asm, P2/eyes]
     - [0x5aad0, asm, P2/fader]
 
-    - [0x5aca0, asm, P2/unk_f] #? unknown file
+    - [0x5aca0, asm, P2/unk_f] # unknown file, falls alphabetically between fader and find
 
     - [0x5af20, c, P2/find]
     - [0x5b8ac, asm, P2/find_padding] # Needed to align P2/find
@@ -271,8 +271,9 @@ segments:
     #- [0x, asm, P2/suv]
 
     - [0xdc480, asm, P2/sw]
-    #- [0x, asm, P2/tail]
-    #- [0x, asm, P2/tank]
+    - [0xdeb20, asm, P2/unk_st] # unknown file, falls alphabetically between sw and tail
+    - [0xdece0, c, P2/tail]
+    - [0xdf798, asm, P2/tank]
     #- [0x, asm, P2/target]
 
     - [0xe18f8, asm, P2/text]
@@ -286,7 +287,7 @@ segments:
     - [0xea088, c, P2/ui]
     - [0xeac78, asm, P2/update]
     - [0xeb408, c, P2/util]
-    - [0xec518, asm, P2/uv_unk] #? unknown file
+    - [0xec518, asm, P2/unk_uv] # unknown file, falls alphabetically between util and vec
     - [0xee650, c, P2/vec]
     - [0xef318, asm, P2/vifs]
     - [0xef900, asm, P2/vis]
