Split actseg.c and sky.c

--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -78,7 +78,7 @@ segments:
     - [0x1f560, c, P2/brx]
     - [0x1fe70, asm, P2/ac]
     #- [0x, asm, P2/act]
-    #- [0x, asm, P2/actseg]
+    - [0x23f28, c, P2/actseg]
     - [0x243c0, asm, P2/alarm]
     - [0x24dc0, asm, P2/alo]
     #- [0x, asm, P2/aseg]
@@ -200,8 +200,8 @@ segments:
     #- [0x, asm, P2/shape]
     - [0xb3988, asm, P2/shd]
     - [0xb5920, asm, P2/shdanim]
-    #- [0x, asm, P2/sky]
-    #- [0x, asm, P2/slotheap]
+    - [0xb6cd8, c, P2/sky]
+    - [0xb6d80, asm, P2/slotheap]
     - [0xb6f50, asm, P2/sm]
     #- [0x, asm, P2/smartguard]
     - [0xb8968, asm, P2/so]
