Split basic.c and bez.c

--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -85,8 +85,8 @@ segments:
     #- [0x, asm, P2/asega]
     #- [0x, asm, P2/barrier]
     - [0x30cf0, asm, P2/bas]
-    - [0x310e8, asm, P2/basic]
-    - [0x31168, asm, P2/bez]
+    - [0x310e8, c, P2/basic]
+    - [0x31168, c, P2/bez]
     - [0x31f48, c, P2/binoc]
     - [0x38290, c, P2/bis]
     - [0x395a0, asm, P2/bbmark]
