Split text.c and fill in text.h

--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -234,7 +234,7 @@ segments:
     - [0xdece0, c, P2/tail]
     - [0xdf798, asm, P2/tank]
     #- [0x, asm, P2/target]
-    - [0xe18f8, asm, P2/text]
+    - [0xe18f8, c, P2/text]
     - [0xe3268, c, P2/thread]
     - [0xe3420, asm, P2/tn]
     - [0xe5e38, c, P2/transition]
