--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -470,7 +470,7 @@ segments:
     #- [0x, data, P2/text]
     #- [0x, data, P2/thread]
     #- [0x, data, P2/tn]
-    #- [0x, data, P2/transition]
+    - [0x176af0, data, P2/transition]
     #- [0x, data, P2/turret]
     #- [0x, data, P2/tv]
     #- [0x, data, P2/ub]
