P2/phasemem.c: Match phasemem

--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -174,7 +174,7 @@ segments:
     #- [0x, asm, P2/ms]
     #- [0x, asm, P2/murray]
     - [0x917e0, asm, P2/path]
-    - [0x92e70, asm, P2/phasemem]
+    - [0x92e70, c, P2/phasemem]
     - [0x92ec0, asm, P2/pipe]
     - [0x93068, asm, P2/pnt]
     - [0x931a8, c, P2/po]
