--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -175,6 +175,7 @@ segments:
     #- [0x, asm, P2/murray]
     - [0x917e0, asm, P2/path]
     - [0x92e70, c, P2/phasemem]
+    - [0x92ebc, asm, P2/phasemem_padding] # 4 bytes padding to align P2/phasemem
     - [0x92ec0, asm, P2/pipe]
     - [0x93068, asm, P2/pnt]
     - [0x931a8, c, P2/po]
@@ -403,7 +404,7 @@ segments:
     #- [0x, data, P2/murray]
     #- [0x, data, P2/path]
 
-    - [0x16aba4, data, P2/phasemem]
+    - [0x16aba4, .data, P2/phasemem]
     - [0x16aba8, data, P2/pipe]
     - [0x16abac, data]
 
