--- a/.github/workflows/frogress.yml
+++ b/.github/workflows/frogress.yml
@@ -1,22 +1,22 @@
-name: Frogress
+name: Post progress to Frogress
 
 on:
   push:
     branches:
       - main
-      - frogress
+      - progress
 
 jobs:
-  update-progress:
+  frogress-upload:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: "3.x"
+          python-version: "3.9.x"
 
       - name: Install dependencies
         run: |
