--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -77,7 +77,7 @@ segments:
     # P2 sources
     # All .c files (but compiled as c++)
     #--------------------------------------------------------
-    - [0x1dbb8, asm, P2/989snd] #MARK: P2
+    - [0x1dbb8, c, P2/989snd] #MARK: P2
     - [0x1f560, c, P2/brx]
     - [0x1fe70, asm, P2/ac]
     #- [0x, asm, P2/act]
@@ -300,6 +300,8 @@ segments:
     # Data (variable data)
     #--------------------------------------------------------
     - [0x151580, data] #MARK: data
+    - [0x15d340, data, P2/989snd]
+    - [0x161e60, data]
 
     #- [0x, data, P2/brx]
     #- [0x, data, P2/ac]
