--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -110,7 +110,7 @@ segments:
     - [0x44148, c, P2/cm]
     - [0x47100, asm, P2/cnvo]
     - [0x47340, c, P2/coin]
-    - [0x4a398, asm, P2/cplcy]
+    - [0x4a398, c, P2/cplcy]
     - [0x4bbd0, c, P2/credit]
     - [0x4c0c0, c, P2/crout]
     - [0x4c550, asm, P2/crusher]
